[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/Enemy/Enemy.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.036, 1.036, 1.036 )

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=3]

[node name="Enemy" type="KinematicBody"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
skeleton = NodePath("")

[node name="agent" type="NavigationAgent" parent="."]
avoidance_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0777035, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 50, 0, 0, 0, 3, 0, 0, 0, 50, 0, 0, 0 )
shape = SubResource( 3 )

[connection signal="velocity_computed" from="agent" to="." method="_on_agent_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
